--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ function __doPostBack(eventTarget, eventArgument) {
            <div style="float: left; width:100%; padding-right:0px;padding-top:10px;">
                <div style="width:2%; height:90px; padding-right:10px; float: left;">&nbsp;</div>
                <div style="width:65%;height:90px; padding-right:10px; float: left;">
-                   <img src="Images/ppsr_logo_01.svg" id="ctl00_ctl00_m_Img1" alt="Australian Financial Security Authority">
+                   <img src="https://transact.ppsr.gov.au/ppsr/Images/ppsr_logo_01.svgg" id="ctl00_ctl00_m_Img1" alt="Australian Financial Security Authority">
                </div>
 
            </div>
@@ -914,6 +914,8 @@ function __doPostBack(eventTarget, eventArgument) {
 
 
 </div>
+
+<br style="clear:both;"/>
                         <!--ProgressWizard Panel -->
 
                     </div>
